计算器计算原理实现和优化

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="clear">C</string>
     <string name="tan">tan</string>
     <string name="fac">n!</string>
-    <string name="back">back</string>
+    <string name="del">DEL</string>
     <string name="cos">cos</string>
     <string name="sin">sin</string>
     <string name="right">)</string>
